# stalkerlike-client-cli

./: stalkerlike-client-cli.cabal
app/: Main.hs
app/Data/: Entity.hs  TCP.hs  TCPEvent.hs
app/TCP/: Client.hs
app/UI/: App.hs  Common.hs  Login.hs
