name:                stalkerlike-client-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stalkerlike-client-cli#readme
license:             GNUGPLv3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable stalkerlike-client-cli-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , brick
                     , vty
                     , network
                     , data-default
                     , aeson
                     , bytestring
  default-language:    Haskell2010
  other-modules:       Data.Entity
                     , Data.TCPEvent
                     , TCP.Client
                     , UI.App

test-suite stalkerlike-client-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stalkerlike-client-cli
